# Expense-Tracker

./: README.md  manage.py  pyproject.toml  requirements.txt
src/apps/: __init__.py
src/apps/accounts/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
src/apps/dashboard/: __init__.py  urls.py  views.py
src/apps/expenses/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
src/expense_tracker/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/accounts/: profile.html  signup.html
templates/dashboard/: index.html
templates/expenses/: confirm_delete.html  form.html  index.html
templates/registration/: login.html
tests/: test_models.py  test_views.py
