[project]
name = "python-expense-tracker"
version = "0.1.0"
description = "A Django expense tracker with charts and savings goals."
authors = [{name = "Mobin Yousefi", email = "mobinyousefi@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "expense_tracker.settings"
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP"]
ignore = ["E203","E501"]
fix = true

[tool.black]
line-length = 100
target-version = ["py310","py311","py312","py313"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"